kubernetes/nginx-demo/svc.yml
apiVersion: v1
kind: Service
metadata:
  namespace: alex
  name: nginx-service
spec:
  type: ClusterIP
  selector:
    app: nginx
  ports:
    - port: 80
      targetPort: 80
